2009-01-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (do-symbols*): Wrap body in TAGBODY.

2009-01-10  David Reitter <david.reitter@gmail.com>

	* slime.el (slime-space): Declare `slime-space' to
	`delete-selection-mode' and friends (CUA) so that their behavior
	is the same as with normal insertion of a space.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-file): Take output-file as
	additional argument.  Update backends accordingly.

	* swank.lisp (*fasl-directory*): New variable.
	(fasl-pathname): New function.
	(compile-file-for-emacs): Use it.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (set-default-initial-binding): New function.

	* swank.lisp (setup-stream-indirection):  Use it

2009-01-09  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (swank-compile-string): Don't use the
	no-longer-existing directory argument.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move the tree widget for compiler notes to contrib/.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-string): Pass the
	buffer-file-name to Lisp, not only the directory.
	Update callers accordingly.
	* slime.el ([test] arglist): Update arglist.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-popup-restore-data): Renamed from
	slime-popup-buffer-restore-info.
	(slime-popup-buffer-saved-fingerprint)
	(slime-popup-buffer-saved-emacs-snapshot)
	(slime-popup-buffer-snapshot-unchanged-p)
	(slime-popup-buffer-restore-snapshot)
	(slime-xref-quit, slime-xref-retract): Deleted.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	Remove some customization variables of questionale use.

	* slime.el (slime-when-complete-filename-expand)
	(slime-space-information-p, slime-display-compilation-output)
	(sldb-show-location-recenter-arg, slime-recenter-window)
	(slime-display-buffer-region): Deleted.
