@@ -2,6 +2,11 @@
 
 	* swank.lisp (do-symbols*): Wrap body in TAGBODY.
 
+2009-01-10  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-compile-file-options): New variable.
+	(slime-compile-file): Use it.
+
 2009-01-10  David Reitter <david.reitter@gmail.com>
 
 	* slime.el (slime-space): Declare `slime-space' to
